test/expected/explain_efi-c17.out
explain enum E : int x
                 ^
18: error: enum with underlying type not supported until C23
